--- a/langgraph_crag_local.ipynb
+++ b/langgraph_crag_local.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4a660963-bd3d-4c87-b2e4-b6e432055211",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "28224481-4cb0-4bc6-bf88-2d2b383094df",
    "metadata": {},
    "outputs": [],
@@ -124,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2f4db331-c4d0-4c7c-a9a5-0bebc8a89c6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_llm = \"mistral:latest\""
+    "local_llm = \"qwen2:latest\""
    ]
   },
   {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "bb8b789b-475b-4e1b-9c66-03504c837830",
    "metadata": {},
    "outputs": [
@@ -152,8 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 45.9M/45.9M [00:05<00:00, 8.35MiB/s]\n",
-      "Verifying: 100%|██████████| 45.9M/45.9M [00:00<00:00, 538MiB/s]\n"
+      "WARNING:root:USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
      ]
     }
    ],
@@ -162,7 +161,6 @@
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain_community.embeddings import GPT4AllEmbeddings\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_mistralai import MistralAIEmbeddings\n",
     "\n",
     "# Load\n",
     "url = \"https://lilianweng.github.io/posts/2023-06-23-agent/\"\n",
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "0e75c029-6c10-47c7-871c-1f4932b25309",
    "metadata": {},
    "outputs": [
@@ -228,7 +226,6 @@
     "\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain_community.chat_models import ChatOllama\n",
-    "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
     "# LLM\n",
@@ -254,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "dad03302-bd93-43fc-949e-af51a3298cfa",
    "metadata": {},
    "outputs": [
@@ -262,13 +259,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " To generate the most salient high-level questions given a set of observations, I would first need to know the specific observations or statements provided. However, based on the context you've given, here are three general questions that could be asked:\n",
+      "The concept of building agents with Large Language Models (LLMs) as their core controllers is an innovative approach that has been explored through various proof-of-concept demonstrations such as AutoGPT, GPT-Engineer, and BabyAGI. These examples showcase the potential beyond generating well-written content like essays or programs; LLMs can be utilized as powerful general problem solvers.\n",
       "\n",
-      "1. What are the key challenges in long-term planning and task decomposition for LLM-powered agents?\n",
-      "2. How can we improve the reliability of the natural language interface between LLMs and external components such as memory and tools?\n",
-      "3. What strategies can be employed to optimize believability at the moment vs in time for an LLM-powered agent?\n",
+      "In a system powered by LLMs, these models serve as the \"brain\" of the agent, complemented by essential components that facilitate interaction with the environment and other agents. However, several challenges are inherent in this setup:\n",
       "\n",
-      "To answer these questions, I would need to analyze the provided observations or statements and synthesize the relevant information into higher-level inferences. The answers could then guide the planning and reacting of the agent by translating reflections and environment information into actions.\n"
+      "1. **Finite Context Length**: The context capacity is limited, which restricts the inclusion of historical information, detailed instructions, API call contexts, and responses. This limitation necessitates careful design to work within a constrained communication bandwidth.\n",
+      "\n",
+      "2. **Long-term Planning and Task Decomposition**: Adjusting plans when faced with unexpected errors can be challenging for LLMs compared to human adaptability through trial and error. This makes them less robust in scenarios requiring long-term planning.\n",
+      "\n",
+      "3. **Reliability of Natural Language Interface**: The interface between the agent and external components, such as memory and tools, relies on natural language. However, model outputs may contain formatting errors or exhibit rebellious behavior (refusing to follow instructions), necessitating extensive parsing code for reliability.\n",
+      "\n",
+      "To address these challenges, a generative agent architecture has been proposed that focuses on translating reflections and environment information into actions through planning and reacting mechanisms. This involves optimizing decisions not only in the present but also considering future implications.\n",
+      "\n",
+      "A proof-of-concept example is AutoGPT, which demonstrates setting up autonomous agents with LLMs as controllers. Despite reliability issues due to the natural language interface, it serves as an inspiring demonstration of what can be achieved with this approach. The system message used by AutoGPT includes user inputs for goals and constraints that guide the agent's decision-making process.\n",
+      "\n",
+      "In summary, while building agents powered by LLMs presents exciting opportunities, addressing challenges such as context limitations, long-term planning robustness, and interface reliability is crucial to realizing their full potential in autonomous systems.\n"
      ]
     }
    ],
@@ -299,17 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f4b61211-70b5-4471-a714-feb9cc91e860",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\" What is the function of an agent's memory in a given context?\""
+       "'What type of memory does an agent utilize?'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "b36a2f36-bc5f-408d-a5e8-3fa203c233f6",
    "metadata": {},
    "outputs": [],
@@ -368,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "10028794-2fbc-43f9-aa4c-7fe3abd69c1e",
    "metadata": {},
    "outputs": [],
@@ -396,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "447d1333-082d-479a-a6fa-0ac0df78bb9d",
    "metadata": {},
    "outputs": [],
@@ -562,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "0a63776c-f9cd-46ce-b8cf-95c066dc5b06",
    "metadata": {},
    "outputs": [],
@@ -599,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3ab1d8df-a74e-4b48-a30b-e39bbfd5925a",
    "metadata": {},
    "outputs": [
@@ -619,38 +624,7 @@
       "---DECISION: GENERATE---\n",
       "\"Node 'grade_documents':\"\n",
       "'\\n---\\n'\n",
-      "---GENERATE---\n",
-      "\"Node 'generate':\"\n",
-      "'\\n---\\n'\n",
-      "(' In an LLM (Large Language Model) powered autonomous agent system, the model '\n",
-      " \"functions as the agent's brain. The key components of this system include \"\n",
-      " 'Planning, Memory, and Tool use.\\n'\n",
-      " '\\n'\n",
-      " '1. Planning involves breaking down large tasks into smaller, manageable '\n",
-      " 'subgoals for efficient handling of complex tasks. It also includes '\n",
-      " 'self-criticism, learning from mistakes, and refining actions to improve '\n",
-      " 'results.\\n'\n",
-      " '\\n'\n",
-      " '2. Memory is crucial for the agent as it allows it to learn and retain '\n",
-      " 'information over extended periods. This can be divided into Short-term '\n",
-      " 'memory (STM) and Long-term memory (LTM). STM, also known as working memory, '\n",
-      " 'stores information that is currently needed for complex cognitive tasks like '\n",
-      " 'learning and reasoning. LTM can store information for a long time, ranging '\n",
-      " 'from days to decades, with an essentially unlimited storage capacity. There '\n",
-      " 'are two subtypes of LTM: explicit/declarative memory (memory of facts and '\n",
-      " 'events) and implicit/procedural memory (unconscious skills and routines).\\n'\n",
-      " '\\n'\n",
-      " '3. Tool use allows the agent to call external APIs for additional '\n",
-      " 'information that is missing from the model weights, including current '\n",
-      " 'information, code execution capability, access to proprietary information '\n",
-      " 'sources, etc.\\n'\n",
-      " '\\n'\n",
-      " 'The diagram below (Fig. 7) compares different methods on environments '\n",
-      " 'requiring memory and exploration: AD, ED, source policy, and RL^2. The '\n",
-      " 'source policies are trained with A3C for \"dark\" environments and DQN for '\n",
-      " 'watermaze.\\n'\n",
-      " '\\n'\n",
-      " 'The following figure (Fig. 8) categorizes human memory.')\n"
+      "---GENERATE---\n"
      ]
     }
    ],
