--- a/hierarchical_agent_teams.ipynb
+++ b/hierarchical_agent_teams.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "To do this, let's build a simple research assistant! The graph will look something like the following:\n",
     "\n",
-    "![diagram](https://langchain-ai.github.io/langgraph/tutorials/multi_agent/img/hierarchical-diagram.png)\n",
+    "![diagram](./img/hierarchical-diagram.png)\n",
+    "\n",
     "This notebook is inspired by the paper [AutoGen: Enabling Next-Gen LLM Applications via Multi-Agent Conversation](https://arxiv.org/abs/2308.08155), by Wu, et. al. In the rest of this notebook, you will:\n",
     "\n",
     "1. Define the agents' tools to access the web and write files\n",
@@ -42,25 +43,6 @@
    "source": [
     "# %%capture --no-stderr\n",
     "# %pip install -U langgraph langchain langchain_openai langchain_experimental"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30c2f3de-c730-4aec-85a6-af2c2f058803",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-15T08:19:42.395571Z",
-     "start_time": "2024-05-15T08:19:42.365662Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from langchain_community.chat_models import ChatOllama\n",
-    "os.environ['TAVILY_API_KEY'] = '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'\n",
-    "local_llm = \"qwen2:latest\"\n",
-    "llm = ChatOllama(model=local_llm, format=\"json\", temperature=0)"
    ]
   },
   {
@@ -91,16 +73,15 @@
    },
    "outputs": [],
    "source": [
-    "from typing import Annotated, List, Tuple, Union\n",
+    "from typing import Annotated, List\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "from langchain_core.tools import tool\n",
-    "from langsmith import trace\n",
+    "import os\n",
+    "os.environ['TAVILY_API_KEY'] = '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'\n",
     "\n",
     "tavily_tool = TavilySearchResults(max_results=5)\n",
-    "\n",
     "\n",
     "@tool\n",
     "def scrape_webpages(urls: List[str]) -> str:\n",
@@ -145,6 +126,7 @@
     "from typing import Dict, Optional\n",
     "\n",
     "from langchain_experimental.utilities import PythonREPL\n",
+    "from typing_extensions import TypedDict\n",
     "\n",
     "_TEMP_DIRECTORY = TemporaryDirectory()\n",
     "WORKING_DIRECTORY = Path(_TEMP_DIRECTORY.name)\n",
@@ -209,13 +191,15 @@
     "\n",
     "    return f\"Document edited and saved to {file_name}\"\n",
     "\n",
+    "\n",
     "# Warning: This executes code locally, which can be unsafe when not sandboxed\n",
     "\n",
     "repl = PythonREPL()\n",
     "\n",
+    "\n",
     "@tool\n",
     "def python_repl(\n",
-    "    code: Annotated[str, \"The python code to execute to generate your chart.\"]\n",
+    "    code: Annotated[str, \"The python code to execute to generate your chart.\"],\n",
     "):\n",
     "    \"\"\"Use this to execute python code. If you want to see the output of a value,\n",
     "    you should print it out with `print(...)`. This is visible to the user.\"\"\"\n",
@@ -243,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e09fb60f-1aac-455b-b67d-8d2e4ccfd747",
    "metadata": {
     "ExecuteTime": {
@@ -251,27 +235,14 @@
      "start_time": "2024-05-15T08:19:44.541330Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'langchain_openai'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moutput_parsers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mopenai_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m JsonOutputFunctionsParser\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChatPromptTemplate, MessagesPlaceholder\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_openai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChatOpenAI\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m END, StateGraph\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_agent\u001b[39m(\n\u001b[1;32m     11\u001b[0m     llm: ChatOpenAI,\n\u001b[1;32m     12\u001b[0m     tools: \u001b[38;5;28mlist\u001b[39m,\n\u001b[1;32m     13\u001b[0m     system_prompt: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m     14\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'langchain_openai'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from typing import List, TypedDict\n",
+    "from typing import List, Optional\n",
     "\n",
     "from langchain.agents import AgentExecutor, create_openai_functions_agent\n",
     "from langchain.output_parsers.openai_functions import JsonOutputFunctionsParser\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langchain_openai import ChatOpenAI\n",
-    "\n",
     "from langgraph.graph import END, StateGraph\n",
     "\n",
     "def create_agent(\n",
@@ -343,14 +314,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6997414",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "00282b1f-bb4d-4ee7-9bae-e8e6f586f12e",
    "metadata": {},
@@ -379,9 +342,8 @@
     "import functools\n",
     "import operator\n",
     "\n",
-    "from langchain_core.messages import AIMessage, BaseMessage, HumanMessage\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage\n",
     "from langchain_openai.chat_models import ChatOpenAI\n",
-    "import functools\n",
     "\n",
     "\n",
     "# ResearchTeam graph state\n",
@@ -394,6 +356,12 @@
     "    # Used to route work. The supervisor calls a function\n",
     "    # that will update this every time it makes a decision\n",
     "    next: str\n",
+    "\n",
+    "\n",
+    "llm = ChatOpenAI(\n",
+    "    api_key=\"ollama\",\n",
+    "    model=\"qwen2\",\n",
+    "    base_url=\"http://localhost:11434/v1\")\n",
     "\n",
     "search_agent = create_agent(\n",
     "    llm,\n",
@@ -454,6 +422,7 @@
     "    {\"Search\": \"Search\", \"WebScraper\": \"WebScraper\", \"FINISH\": END},\n",
     ")\n",
     "\n",
+    "\n",
     "research_graph.set_entry_point(\"supervisor\")\n",
     "chain = research_graph.compile()\n",
     "\n",
@@ -466,6 +435,7 @@
     "        \"messages\": [HumanMessage(content=message)],\n",
     "    }\n",
     "    return results\n",
+    "\n",
     "\n",
     "research_chain = enter_chain | chain"
    ]
@@ -542,6 +512,7 @@
     "import operator\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "# Document writing team graph state\n",
     "class DocWritingState(TypedDict):\n",
     "    # This tracks the team's conversation internally\n",
@@ -565,7 +536,7 @@
     "        written_files = [\n",
     "            f.relative_to(WORKING_DIRECTORY) for f in WORKING_DIRECTORY.rglob(\"*\")\n",
     "        ]\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        pass\n",
     "    if not written_files:\n",
     "        return {**state, \"current_files\": \"No files written.\"}\n",
@@ -594,9 +565,7 @@
     "    \"You are an expert senior researcher tasked with writing a paper outline and\"\n",
     "    \" taking notes to craft a perfect paper.{current_files}\",\n",
     ")\n",
-    "\n",
     "context_aware_note_taking_agent = prelude | note_taking_agent\n",
-    "\n",
     "note_taking_node = functools.partial(\n",
     "    agent_node, agent=context_aware_note_taking_agent, name=\"NoteTaker\"\n",
     ")\n",
@@ -607,9 +576,7 @@
     "    \"You are a data viz expert tasked with generating charts for a research project.\"\n",
     "    \"{current_files}\",\n",
     ")\n",
-    "\n",
     "context_aware_chart_generating_agent = prelude | chart_generating_agent\n",
-    "\n",
     "chart_generating_node = functools.partial(\n",
     "    agent_node, agent=context_aware_note_taking_agent, name=\"ChartGenerator\"\n",
     ")\n",
@@ -684,6 +651,7 @@
     "    }\n",
     "    return results\n",
     "\n",
+    "\n",
     "# We reuse the enter/exit functions to wrap the graph\n",
     "authoring_chain = (\n",
     "    functools.partial(enter_chain, members=authoring_graph.nodes)\n",
@@ -753,10 +721,8 @@
    },
    "outputs": [],
    "source": [
-    "from langchain_core.messages import AIMessage, BaseMessage, HumanMessage\n",
+    "from langchain_core.messages import BaseMessage\n",
     "from langchain_openai.chat_models import ChatOpenAI\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-4-1106-preview\")\n",
     "\n",
     "supervisor_node = create_team_supervisor(\n",
     "    llm,\n",
@@ -786,11 +752,14 @@
     "    messages: Annotated[List[BaseMessage], operator.add]\n",
     "    next: str\n",
     "\n",
+    "\n",
     "def get_last_message(state: State) -> str:\n",
     "    return state[\"messages\"][-1].content\n",
     "\n",
+    "\n",
     "def join_graph(response: dict):\n",
     "    return {\"messages\": [response[\"messages\"][-1]]}\n",
+    "\n",
     "\n",
     "# Define the graph.\n",
     "super_graph = StateGraph(State)\n",
