--- a/agentic_rag.ipynb
+++ b/agentic_rag.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Agentic RAG\n",
     "\n",
+    "https://github.com/langchain-ai/langgraph/blob/main/docs/docs/tutorials/rag/langgraph_agentic_rag.ipynb\n",
+    "\n",
     "[Retrieval Agents](https://python.langchain.com/docs/tutorials/qa_chat_history/#agents) are useful when we want to make decisions about whether to retrieve from an index.\n",
     "\n",
     "To implement a retrieval agent, we simply need to give an LLM access to a retriever tool.\n",
@@ -507,7 +509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lg_env",
+   "display_name": "graph_env",
    "language": "python",
    "name": "python3"
   },
