--- a/reflection.ipynb
+++ b/reflection.ipynb
@@ -219,6 +219,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19db8520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image, display\n",
+    "display(Image(graph.get_graph(xray=True).draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "010ce60a-8b7d-4258-99d1-52705146844f",
    "metadata": {},
    "outputs": [],
@@ -298,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
