plan-and-execute

--- a/plan-and-execute.ipynb
+++ b/plan-and-execute.ipynb
@@ -14,13 +14,11 @@
     "The core idea is to first come up with a multi-step plan, and then go through that plan one item at a time.\n",
     "After accomplishing a particular task, you can then revisit the plan and modify as appropriate.\n",
     "\n",
-    "This compares to a typical [ReAct](https://arxiv.org/abs/2210.03629) style agent where you think one step at a time.\n",
+    "This compares to a typical **[ReAct](https://arxiv.org/abs/2210.03629) style** agent where you think one step at a time.\n",
     "The advantages of this \"plan-and-execute\" style agent are:\n",
     "\n",
     "1. Explicit long term planning (which even really strong LLMs can struggle with)\n",
-    "2. Ability to use smaller/weaker models for the execution step, only using larger/better models for the planning step\n",
-    "\n",
-    "The following walkthrough demonstrates how to do so in LangGraph. The resulting agent will leave a trace like the following example: ([link](https://smith.langchain.com/public/d46e24d3-dda6-44d5-9550-b618fca4e0d4/r))."
+    "2. Ability to use smaller/weaker models for the execution step, only using larger/better models for the planning step\n"
    ]
   },
   {
@@ -36,17 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3aed4398",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(\n",
+    "from langchain_community.chat_models import ChatZhipuAI\n",
+    "import os\n",
+    "\n",
+    "llama_model = ChatOpenAI(\n",
     "    model=\"llama3.2\",\n",
     "    base_url=\"http://localhost:11434/v1\",\n",
-    "    temperature=0,\n",
-    ")"
+    "    temperature=0\n",
+    ")\n",
+    "\n",
+    "zhipu_model = ChatZhipuAI(\n",
+    "    model=\"GLM-4-Plus\",\n",
+    "    temperature=0\n",
+    ")\n",
+    "\n",
+    "kimi_model = ChatOpenAI(\n",
+    "    model=\"moonshot-v1-8k\",\n",
+    "    api_key=os.environ[\"MOONSHOT_API_KEY\"],\n",
+    "    base_url=\"https://api.moonshot.cn/v1\",\n",
+    ")\n",
+    "\n",
+    "llms = [zhipu_model, kimi_model, llama_model]"
    ]
   },
   {
@@ -61,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "25b9ec62-0675-4715-811c-9b32c635b22f",
    "metadata": {},
    "outputs": [],
@@ -89,14 +103,14 @@
    "outputs": [],
    "source": [
     "from langchain import hub\n",
-    "\n",
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
-    "# Get the prompt to use - you can modify this!\n",
+    "# https://smith.langchain.com/hub\n",
+    "# https://smith.langchain.com/hub/ih/ih-react-agent-executor\n",
     "prompt = hub.pull(\"ih/ih-react-agent-executor\")\n",
     "prompt.pretty_print()\n",
     "\n",
-    "agent_executor = create_react_agent(llm, tools, state_modifier=prompt)"
+    "agent_executor = create_react_agent(llms[1], tools, state_modifier=prompt)"
    ]
   },
   {
@@ -127,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8eeeaeea-8f10-4fbe-8e24-4e1a2381a009",
    "metadata": {},
    "outputs": [],
@@ -168,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4a88626d-6dfd-4488-87f0-a9a0dd6da44c",
    "metadata": {},
    "outputs": [],
@@ -185,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ec7b1867-1ea3-4df3-9a98-992a1c32ec49",
    "metadata": {},
    "outputs": [],
@@ -203,7 +217,7 @@
     "        (\"placeholder\", \"{messages}\"),\n",
     "    ]\n",
     ")\n",
-    "planner = planner_prompt | llm.with_structured_output(Plan)"
+    "planner = planner_prompt | llms[2].with_structured_output(Plan)"
    ]
   },
   {
@@ -416,7 +430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lg_env",
+   "display_name": "graph_env",
    "language": "python",
    "name": "python3"
   },
