--- a/reflexion.ipynb
+++ b/reflexion.ipynb
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graph_env",
+   "display_name": "lg_env",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
