--- a/react.ipynb
+++ b/react.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ReAct"
+    "# ReAct\n",
+    "\n",
+    "![react](react.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,25 +65,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "明年，即2025年，是中国农历的乙巳年，也就是蛇年。这一年的农历起止时间是2025年1月29日至2026年2月16日。同时，2025年也是一个平年，共有365天，但由于有闰月，所以在农历的一年里会有两个立春，因此也被称为双春年。\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def get_weather(city_name: str):\n",
+    "    \"\"\"获取天气信息的函数\"\"\"\n",
+    "    weather_conditions = {\n",
+    "        '北京': '晴朗',\n",
+    "        '上海': '小雨',\n",
+    "        '广州': '多云',\n",
+    "    }\n",
+    "    return weather_conditions.get(city_name, \"未知天气\")\n",
+    "\n",
+    "print(get_weather('北京'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "\n",
-    "search_tools = [tavily_search, serper_search]\n",
+    "import json\n",
+    "from IPython.display import Markdown, display\n",
     "\n",
     "prompt_template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a helpful assistant. Current time: {time}\"),\n",
+    "    (\"system\",\n",
+    "     \"\"\"你是靠谱的助理。对于给定的目标，制定一个简单的分步计划。\n",
+    "     该计划应涉及单个任务，如果正确执行，将产生正确的答案。不要添加任何多余的步骤。\n",
+    "     最后一步的结果应该是最终答案，如果需要提现时间需明确给出。确保每个步骤都包含所需的所有信息 - 不要跳过步骤。\n",
+    "     必要时调用工具。\n",
+    "     当前时间: {time}\"\"\"),\n",
     "    MessagesPlaceholder(\"messages\")\n",
     "]).partial(\n",
     "    time=lambda: datetime.datetime.now().isoformat(),\n",
@@ -89,15 +106,22 @@
     "\n",
     "agent_executor = create_react_agent(\n",
     "    model=llm,\n",
-    "    tools=search_tools,\n",
-    "    state_modifier=prompt_template\n",
+    "    tools=[get_weather, serper_search],\n",
+    "    state_modifier=prompt_template,\n",
+    "    debug=True\n",
     ")\n",
     "\n",
     "response = agent_executor.invoke(\n",
-    "    {\"messages\": [(\"user\", query)]}\n",
+    "    {\"messages\": [(\"user\", \"明天我要去中国的首都，后天要去中国的金融中心，帮我查询那里的天气。\")]}\n",
     ")\n",
     "\n",
-    "print(response['messages'][-1].content)"
+    "formatted_response = json.dumps(\n",
+    "    response['messages'],\n",
+    "    default=lambda o: o.__dict__ if hasattr(o, '__dict__') else str(o),\n",
+    "    indent=4,\n",
+    "    ensure_ascii=False\n",
+    ")\n",
+    "display(Markdown(f\"```json\\n{formatted_response}\\n```\"))"
    ]
   }
  ],
