--- a/lats.ipynb
+++ b/lats.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "54c6f319-3966-4f66-aa7b-50e249189111",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e10c94ba-9daa-4899-97ce-4f28428c2c38",
    "metadata": {},
    "outputs": [],
@@ -247,13 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "48738896-42ac-47eb-b482-0d4d4dd86c87",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(\n",
+    "from langchain_community.chat_models import QianfanChatEndpoint\n",
+    "llm = QianfanChatEndpoint(\n",
+    "    model=\"ERNIE-3.5-8K\",\n",
+    "    temperature=0.2,\n",
+    "    timeout=30,\n",
+    ")\n",
+    "llm2 = ChatOpenAI(\n",
     "    model=\"llama3.2\",\n",
     "    base_url=\"http://localhost:11434/v1\",\n",
     ")"
@@ -271,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "55c2aff3-f454-43da-8f45-1a3d46523cd5",
    "metadata": {},
    "outputs": [],
@@ -299,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ddfd1750-c265-4b29-b505-83b1c5e2d30e",
    "metadata": {},
    "outputs": [],
@@ -352,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "72fc5363-f0f3-4362-8499-14eb583bd75b",
    "metadata": {},
    "outputs": [],
@@ -405,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5b6b173c-78f5-4ae1-80b3-28c80e68f5c5",
    "metadata": {},
    "outputs": [],
@@ -453,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "550bff9a-86aa-43ad-ad98-506e97c122d2",
    "metadata": {},
    "outputs": [],
@@ -502,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d32af859-53e8-46be-8182-7d522be31f54",
    "metadata": {},
    "outputs": [],
@@ -596,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8aec0f20-f978-4df0-8900-e3a1f0544f6d",
    "metadata": {},
    "outputs": [],
@@ -745,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
