--- a/hello-langgraph-python/tutorials/patterns/reflection/tot.ipynb
+++ b/hello-langgraph-python/tutorials/patterns/reflection/tot.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,8 +150,13 @@
    ],
    "source": [
     "import csv\n",
+    "from pathlib import Path\n",
     "\n",
-    "with open(\"data/24.csv\", \"r\") as file:\n",
+    "# Use path relative to project root\n",
+    "project_root = Path().resolve().parent.parent.parent\n",
+    "data_file = project_root / \"data/24.csv\"\n",
+    "\n",
+    "with open(data_file, \"r\") as file:\n",
     "    csv_data = file.read()\n",
     "# Get just the Puzzles column (column index 1)\n",
     "puzzles = [row[1].strip() for row in csv.reader(csv_data.splitlines()[1:])]\n",
@@ -230,32 +235,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_score(problem: str, candidate: Candidate) -> ScoredCandidate:\n",
-    "    numbers = list(map(int, problem.split()))\n",
-    "    # Check that the candidate equation uses all 4 numbers exactly once\n",
-    "    used_numbers = [\n",
-    "        token for token in candidate.candidate.tokens if isinstance(token, float)\n",
-    "    ]\n",
-    "    if sorted(used_numbers) != sorted(numbers):\n",
-    "        score = 0\n",
-    "        feedback = \"The equation must use all 4 numbers exactly once.\"\n",
-    "        return ScoredCandidate(\n",
-    "            candidate=candidate.candidate, score=score, feedback=feedback\n",
-    "        )\n",
-    "    try:\n",
-    "        result = candidate.candidate.compute()\n",
-    "        score = 1 / (1 + abs(24 - result))\n",
-    "        feedback = f\"Result: {result}\"\n",
-    "    except Exception as e:\n",
-    "        score = 0\n",
-    "        feedback = f\"Invalid equation. Error: {repr(e)}\"\n",
-    "    return ScoredCandidate(\n",
-    "        candidate=candidate.candidate, score=score, feedback=feedback\n",
-    "    )"
+    "import csv\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Use path relative to project root\n",
+    "project_root = Path().resolve().parent.parent.parent\n",
+    "data_file = project_root / \"data/24.csv\"\n",
+    "\n",
+    "# Read the CSV file and find the row that matches the game_id\n",
+    "with open(data_file, \"r\") as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    for row in reader:\n",
+    "        if row[\"game_id\"] == str(game_id):\n",
+    "            # Create the 4x6 grid\n",
+    "            grid = []\n",
+    "            for i in range(1, 5):\n",
+    "                grid.append(list(map(int, row[f\"puzzle{i}\"].split())))\n",
+    "\n",
+    "            # Find the initial state (numbers that are already placed)\n",
+    "            initial_state = {(i, j) for i in range(4) for j in range(6) if grid[i][j] != 0}\n",
+    "            break\n",
+    "print(grid)\n",
+    "print(initial_state)"
    ]
   },
   {
