--- a/hello-langgraph-python/tutorials/rag/crag.ipynb
+++ b/hello-langgraph-python/tutorials/rag/crag.ipynb
@@ -97,15 +97,16 @@
    "source": [
     "### Retrieval Grader\n",
     "\n",
+    "# Add scripts directory to path for local_retriever import\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "project_root = Path().resolve().parent.parent\n",
+    "sys.path.insert(0, str(project_root / 'scripts'))\n",
+    "\n",
+    "from local_retriever import *\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
-    "from pydantic import BaseModel, Field\n",
-    "\n",
-    "llm = ChatOpenAI(\n",
-    "    model = \"llama3.2\",\n",
-    "    base_url = \"http://localhost:11434/v1\",\n",
-    ")\n",
     "\n",
     "# Data model\n",
     "class GradeDocuments(BaseModel):\n",
@@ -115,11 +116,18 @@
     "        description=\"Documents are relevant to the question, 'yes' or 'no'\"\n",
     "    )\n",
     "\n",
+    "\n",
+    "# LLM\n",
+    "from langchain_ollama import ChatOllama\n",
+    "\n",
+    "llm = ChatOllama(model=\"llama3.3\", temperature=0)\n",
+    "\n",
+    "# LLM with function call\n",
     "structured_llm_grader = llm.with_structured_output(GradeDocuments)\n",
     "\n",
     "# Prompt\n",
     "system = \"\"\"You are a grader assessing relevance of a retrieved document to a user question. \\n \n",
-    "    If the document contains keyword(s) or semantic meaning related to the question, grade it as relevant. \\n\n",
+    "    If the document contains keyword(s) or semantic meaning related to the user question, grade it as relevant. \\n\n",
     "    Give a binary score 'yes' or 'no' score to indicate whether the document is relevant to the question.\"\"\"\n",
     "grade_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
@@ -128,11 +136,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "retrieval_grader = grade_prompt | structured_llm_grader\n",
-    "question = \"agent memory\"\n",
-    "docs = retriever.invoke(question)\n",
-    "doc_txt = docs[1].page_content\n",
-    "print(retrieval_grader.invoke({\"question\": question, \"document\": doc_txt}))"
+    "retrieval_grader = grade_prompt | structured_llm_grader"
    ]
   },
   {
