--- a/hello-langgraph-python/tutorials/rag/self_rag.ipynb
+++ b/hello-langgraph-python/tutorials/rag/self_rag.ipynb
@@ -129,10 +129,15 @@
    "source": [
     "### Retrieval Grader\n",
     "\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "# Add scripts directory to path for local_retriever import\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "project_root = Path().resolve().parent.parent\n",
+    "sys.path.insert(0, str(project_root / 'scripts'))\n",
     "\n",
-    "from pydantic import BaseModel, Field\n",
+    "from local_retriever import *\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
     "\n",
     "# Data model\n",
@@ -143,11 +148,13 @@
     "        description=\"Documents are relevant to the question, 'yes' or 'no'\"\n",
     "    )\n",
     "\n",
-    "llm = ChatOpenAI(\n",
-    "    model = \"llama3.2\",\n",
-    "    base_url = \"http://localhost:11434/v1\",\n",
-    "temperature=0, \n",
-    ")\n",
+    "\n",
+    "# LLM\n",
+    "from langchain_ollama import ChatOllama\n",
+    "\n",
+    "llm = ChatOllama(model=\"llama3.3\", temperature=0)\n",
+    "\n",
+    "# LLM with function call\n",
     "structured_llm_grader = llm.with_structured_output(GradeDocuments)\n",
     "\n",
     "# Prompt\n",
@@ -162,11 +169,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "retrieval_grader = grade_prompt | structured_llm_grader\n",
-    "question = \"agent memory\"\n",
-    "docs = retriever.invoke(question)\n",
-    "doc_txt = docs[1].page_content\n",
-    "print(retrieval_grader.invoke({\"question\": question, \"document\": doc_txt}))"
+    "retrieval_grader = grade_prompt | structured_llm_grader"
    ]
   },
   {
