--- a/hello-langgraph-python/tutorials/rag/adaptive_rag.ipynb
+++ b/hello-langgraph-python/tutorials/rag/adaptive_rag.ipynb
@@ -107,11 +107,21 @@
    "source": [
     "### Router\n",
     "\n",
+    "# Add scripts directory to path for local_retriever import\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "project_root = Path().resolve().parent.parent\n",
+    "sys.path.insert(0, str(project_root / 'scripts'))\n",
+    "\n",
     "from typing import Literal\n",
+    "from local_retriever import *\n",
+    "\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from pydantic import BaseModel, Field\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langchain_ollama import ChatOllama\n",
+    "\n",
+    "llm = ChatOllama(model=\"llama3.3\", temperature=0)\n",
+    "\n",
     "\n",
     "# Data model\n",
     "class RouteQuery(BaseModel):\n",
@@ -122,12 +132,8 @@
     "        description=\"Given a user question choose to route it to web search or a vectorstore.\",\n",
     "    )\n",
     "\n",
+    "\n",
     "# LLM with function call\n",
-    "llm = ChatOpenAI(\n",
-    "    model = \"llama3.2\",\n",
-    "    base_url = \"http://localhost:11434/v1\", \n",
-    "    streaming=True\n",
-    ")\n",
     "structured_llm_router = llm.with_structured_output(RouteQuery)\n",
     "\n",
     "# Prompt\n",
@@ -141,13 +147,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "question_router = route_prompt | structured_llm_router\n",
-    "print(\n",
-    "    question_router.invoke(\n",
-    "        {\"question\": \"Who will the Bears draft first in the NFL draft?\"}\n",
-    "    )\n",
-    ")\n",
-    "print(question_router.invoke({\"question\": \"What are the types of agent memory?\"}))"
+    "question_router = route_prompt | structured_llm_router"
    ]
   },
   {
