--- a/hello-langgraph-python/tutorials/rag/agentic_rag.ipynb
+++ b/hello-langgraph-python/tutorials/rag/agentic_rag.ipynb
@@ -62,18 +62,14 @@
     "from langchain_community.document_loaders import MHTMLLoader\n",
     "from pathlib import Path\n",
     "\n",
-    "# Load documents from local MHTML files\n",
-    "# urls = [\n",
-    "#     \"https://lilianweng.github.io/posts/2023-06-23-agent/\",\n",
-    "#     \"https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/\",\n",
-    "#     \"https://lilianweng.github.io/posts/2023-10-25-adv-attack-llm/\",\n",
-    "# ]\n",
+    "# Load documents from local MHTML files using paths relative to project root\n",
+    "project_root = Path().resolve().parent.parent\n",
     "files = [\n",
-    "    \"data/LLM Powered Autonomous Agents.mhtml\",\n",
-    "    \"data/Prompt Engineering.mhtml\",\n",
-    "    \"data/Adversarial Attacks on LLMs.mhtml\",\n",
+    "    project_root / \"data/LLM Powered Autonomous Agents.mhtml\",\n",
+    "    project_root / \"data/Prompt Engineering.mhtml\",\n",
+    "    project_root / \"data/Adversarial Attacks on LLMs.mhtml\",\n",
     "]\n",
-    "docs = [MHTMLLoader(Path(file)).load() for file in files]\n",
+    "docs = [MHTMLLoader(file).load() for file in files]\n",
     "docs_list = [item for sublist in docs for item in sublist]\n",
     "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
     "    chunk_size=100, chunk_overlap=50\n",
@@ -86,10 +82,15 @@
     "    model=\"mxbai-embed-large\"\n",
     ")\n",
     "\n",
+    "# embedding=NomicEmbeddings(\n",
+    "#     model=\"nomic-embed-text-v1.5\",\n",
+    "#     inference_mode=\"local\",\n",
+    "# )\n",
+    "\n",
     "# Add to vectorDB\n",
     "vectorstore = Chroma.from_documents(\n",
     "    documents=doc_splits,\n",
-    "    collection_name=\"agentic-rag-chroma\",\n",
+    "    collection_name=\"rag-chroma\",\n",
     "    persist_directory=\".\",\n",
     "    embedding=embeddings,    \n",
     ")\n",
